// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordBoundaryExpansion renders 0 1`] = `
Array [
  .c0 {
  word-boundary-expansion: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders function 1`] = `
Array [
  .c0 {
  word-boundary-expansion: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders invalid theme path 1`] = `
Array [
  .c0 {
  word-boundary-expansion: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders negative number 1`] = `
Array [
  .c0 {
  word-boundary-expansion: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  word-boundary-expansion: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-expansion: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  word-boundary-expansion: July;
}

@media May {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: July;
}

@media May {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: January;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: January;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    word-boundary-expansion: July;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-boundary-expansion: July;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: September;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: November;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-expansion: January;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-expansion: January;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: December;
  }
}

@media January {
  .c0 {
    word-boundary-expansion: April;
  }
}

@media April {
  .c0 {
    word-boundary-expansion: May;
  }
}

@media June {
  .c0 {
    word-boundary-expansion: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders postitive number 1`] = `
Array [
  .c0 {
  word-boundary-expansion: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders string 1`] = `
Array [
  .c0 {
  word-boundary-expansion: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryExpansion renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wordBoundaryExpansion renders valid theme path 1`] = `
Array [
  .c0 {
  word-boundary-expansion: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-expansion: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
